# data-file-merge

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
examples/: README.md
examples/aws-cloudformation-example/: README.md  dfm-config-example-aws.json  resourceless-template.json
examples/mr-men-example/: README.md  dfm-config-example-1.json  dfm-config-example-2.json
examples/mr-men-example/characters/: little-miss-bossy.json  little-miss-brave.json  little-miss-giggles.json  little-miss-naughty.json  mr-brave.json  mr-bump.json  mr-happy.json  mr-tickle.json
examples/shopping-list-examples/: README.md  dfm-config-example-1.json  dfm-config-example-2.json
examples/shopping-list-examples/shopping-lists/: jacks-shopping-list.json  jills-shopping-list.json
pantry/: config.py  file_location.py  file_types.py  json_merger.py  naming_conventions.py  reference_types.py  regex.py
pantry/config_tests/: config_test.py
pantry/reference_type_tests/: reference_type_test.py
pantry/regex_tests/: regex_test.py
src/: __init__.py  cli.py  config.py  file_location.py  file_types.py  json_merger.py  naming_conventions.py  reference_types.py  regex.py
src/datafilemerge/: config.py  file_location.py  naming_conventions.py  reference_types.py
src/dfm/: cli.py  config.py  exceptions.py  file_location.py  file_types.py  json_merger.py  naming_conventions.py  reference_types.py  regex.py
tests/: naming_convention_test.py  regex_test.py  test_config.py  test_naming_convention.py  test_reference_type.py  test_regex.py
tests/test_files_directory/nested_directory/: build_test_config.json  build_test_merged_file.json  build_test_merged_file_ORIGINAL.json  nested_test_file_2.json
(+14 files in other folders)
