[tool.poetry]
name = "pantry"
version = "0.1.0"
description = ""
authors = ["ServerlessSam"]

[tool.poetry.dependencies]
python = "3.10"
boto3 = "*"
jsonpath-ng = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "==19.10b0"
#"moto[s3,cloudformation]" = "*"
autoflake = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.pytest_cache
    | venv
    | .venv
    | migrations
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["*/venv/*", "*/.venv/*"]