[tool.poetry]
name = "dfm"
version = "0.3.1"
description = ""
authors = ["ServerlessSam"]

[tool.poetry.dependencies]
python = "3.11.*"
boto3 = "*"
jsonpath-ng = "*"
pyinstaller = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "==22.6.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
#"moto[s3,cloudformation]" = "*"
autoflake = "*"
isort = "^5.10.1"
setuptools = "^65.5.1"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
(
  /(
    \.git
    | \.pytest_cache
    | venv
    | .venv
    | migrations
  )/
)
'''

[tool.isort]
line_length = 88
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/.venv/*"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]